[package]
name = "muxi"
version = "4.1.1"
edition = "2024"
description = "Create bookmarks for your tmux sessions on the fly! 🚀"
readme = "README.md"
repository = "https://github.com/iovis/muxi"
license = "MIT"
keywords = ["cli", "tmux"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.62"
dirs = "6.0.0"
git2 = { version = "0.20.3", features = ["vendored-openssl"] }
indicatif = "0.18.3"
miette = { version = "7.6.0", features = ["fancy"] }
mlua = { version = "0.11.5", features = [
  "luajit",
  "send",
  "serialize",
  "vendored",
] }
owo-colors = { version = "4.2.3", features = ["supports-colors"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_path_to_error = "0.1.20"
thiserror = "2.0.17"
timeago = "0.5"
toml_edit = { version = "0.24.0", features = ["serde"] }
url = "2.5.7"

[dev-dependencies]
temp-env = "0.3.6"
uuid = { version = "1.19.0", features = ["serde", "v4"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.profiling]
inherits = "release"
debug = true
