[package]
name = "muxi"
version = "4.2.0"
edition = "2024"
description = "Create bookmarks for your tmux sessions on the fly! 🚀"
readme = "README.md"
repository = "https://github.com/iovis/muxi"
license = "MIT"
keywords = ["cli", "tmux"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.3"
dirs = "6.0.0"
indicatif = "0.18.4"
miette = { version = "7.6.0", features = ["fancy"] }
mlua = { version = "0.11.6", features = [
  "luajit",
  "send",
  "serialize",
  "vendored",
] }
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_path_to_error = "0.1.20"
thiserror = "2.0.18"
timeago = "0.6"
toml_edit = { version = "0.25.11", features = ["serde"] }
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
temp-env = "0.3.6"
uuid = { version = "1.23.1", features = ["serde", "v4"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.profiling]
inherits = "release"
debug = true
